--- a/journal/202007.md
+++ b/journal/202007.md
@@ -209,7 +209,7 @@ Nodes: Throughout [July](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=
 
 - Binance added both [DCR/BUSD](https://www.binance.com/en/support/articles/fee761e58d684bc3a1c7fc11660ab596) and [DCR/USDT](https://www.binance.com/en/support/articles/043fc71cdcce4fcfbdae133d8d0f35aa) pairs within weeks of each other.
 
-- NovaDAX exchange [added](https://twitter.com/Decred_BR/status/1275190825060794377) DCR trading against BRL, USDT, BTC and ETH (_missed in Jun_). As of Aug 4, the BRL pair dominates the others with $5K 24-hour volume, according to [CoinMarketCap](https://coinmarketcap.com/currencies/decred/markets/).
+- NovaDAX exchange [added](https://twitter.com/Decred_BR/status/1275190825060794377) DCR trading against BRL, USDT, BTC and ETH (_missed in Jun_).
 
 - There have been some community rumblings that [Binance](https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$sT0_H8a5bHf8iZFUjrLGlV-tgvJVgwmrH9wvoNTkhKw) is about to launch a staking service for DCR. On July 31 Binance [announced](https://www.binance.com/en/support/articles/f73f03d86f1a421fb9afce1221baff2e) that they will be adding "cold staking" although no coins have been announced yet.
 
@@ -349,9 +349,7 @@ In July DCR was trading between USD 13.70-16.28 / BTC 0.00132-0.00177. The avera
 
 @Checmkate [observes](https://twitter.com/_Checkmatey_/status/1282465263011508225) that "There is a whole swathe of Decred onchain metrics that are lighting up right now".
 
-Binance [opened](https://www.reddit.com/r/decred/comments/i0gk1i/dcrusdt_on_binance/) a DCR/USDT market. (Duplicate ? see integrations above) 
-
-https://www.zerohedge.com/markets/bitcoin-hits-1-year-high-then-plummets-after-someone-liquidates-1-billion-seconds-hammer {early Aug technically, might push to next month}
+The new Binance DCR/USDT pair quickly made it to the top 10 with $50K 24-hour volume as of Aug 6, according to [CoinMarketCap](https://coinmarketcap.com/currencies/decred/markets/). On Brazilian NovaDAX, the new DCR/BRL dominates the other pairs with $5K daily on Aug 4 and $2K on Aug 6.
 
 ## Relevant External
 
