--- a/journal/202007.md
+++ b/journal/202007.md
@@ -353,39 +353,29 @@ The new Binance DCR/USDT pair quickly made it to the top 10 with $50K 24-hour vo
 
 ## Relevant External
 
-{cc tech: PoW, ASIC resistance, full nodes, cc network security, etc}
-
 Clourflare suffered an issue which took down many of the sites which rely on it, the [effect](https://cointelegraph.com/news/cloudflare-outage-shows-crypto-holders-are-not-that-decentralized) could be [seen](https://twitter.com/lopp/status/1284275353389862914) on Bitcoin transaction volume, presumably because transactions from web wallets that rely on Cloudflare were not possible.
 
-{governance, funding, chain forks, community forks}
-
-More than 75 companies in the blockchain and cryptocurrency industry don't mind taking U.S. government backed payroll [loans](https://www.coindesk.com/consensys-polychain-tron-ciphertrace-blockchain-startups-got-18m-in-us-ppp-bailout-loans). These include such well known (and funded) outfits as Consensys (Ethereum) and the Electronic Coin Company (Zcash) - which already enjoys 20% of the ZEC rewards. Opinions are split between those who think taking government-sponsored loans is at odds with cryptocurrency ideals, and those who think they'll be disadvantaged if they refrain while others help themselves. This demonstrates that even a well-subscribed ICO or ongoing 20% block rewards are not guarantees of a secure and sustainable funding situation, it is also necessary to manage spending and if possible establish some reserves.
+More than 75 companies in the blockchain and cryptocurrency industry don't mind taking U.S. government backed payroll [loans](https://www.coindesk.com/consensys-polychain-tron-ciphertrace-blockchain-startups-got-18m-in-us-ppp-bailout-loans). These include such well known (and funded) outfits as Consensys (Ethereum) and the Electronic Coin Company (Zcash) - which already enjoys (part of) the 20% of ZEC block rewards. Opinions are split between those who think taking government-sponsored loans is at odds with cryptocurrency ideals, and those who think they'll be disadvantaged if they refrain while others help themselves. This demonstrates that even a well-subscribed ICO or ongoing 20% block rewards are not guarantees of a secure and sustainable funding situation, it is also necessary to manage spending and if possible establish some reserves.
 
 Josh Concinnati [announced](https://twitter.com/acityinohio/status/1289223795903881216) he is resigning his position as Executive Director of the Zcash Foundation. The tweeted "letter" of resignation cites principles like "In open systems, those who help architect process which grant their organizations power should refuse to wield it" (Josh was involved in securing future ZEC block rewards for the Foundation, which only has a stipend from ECC in the current arrangement). The letter also indicates that a major reason for Josh's departure is the that his relationship with the ECC and capacity to work with them was irreparably damaged during the trademark dispute which formed part of the negotiations about Zcash development funding after the initial period of 20% for ECC ends.
 
-Reddit's "great scaling bake-off" (about scaling reddit's use of Ethereum) attracted considerable attention and many [contributions](https://www.reddit.com/r/ethfinance/comments/hbjyd3/the_great_reddit_scaling_bakeoff/), entries are being assessed in August.
+Josh also shared an advice that applies to broader cryptocurrency and Decred: "beware relentless, unexamined positivism and near-religious zealotry", "welcome serious critique", "do not cargo-cult startup-ism into the core of your protocol, and resist attempts by others to do so", and "question where influence truly lies and who wields it". Check them in full in the original [post](https://gist.github.com/acityinohio/8590e5384806090fbcf5609e613eae51).
 
-Someone is [complaining](https://medium.com/coinmonks/a-primer-on-ethereum-social-governance-fde47d678de9) about Ethereum's social governance processes on platforms like twitter which the developers do not pay attention to, and calling for an all-in-one Ethereum governance platform.
+Reddit's "great scaling bake-off" (about scaling Reddit's use of Ethereum) attracted considerable attention and many [contributions](https://www.reddit.com/r/ethfinance/comments/hbjyd3/the_great_reddit_scaling_bakeoff/), entries are being assessed in August.
 
-{DEX}
+Someone is [complaining](https://medium.com/coinmonks/a-primer-on-ethereum-social-governance-fde47d678de9) about Ethereum's social governance processes on platforms like Twitter which the developers do not pay attention to, and calling for an all-in-one Ethereum governance platform "that effectively gauges the sentiment of the Ethereum community to ensure their voices are being represented".
 
-Ravencoin was subjected to an [attack](https://medium.com/@tronblack/ravencoin-post-vulnerability-fix-fb3a4bd70b7b) which exploited a protocol bug to print RVN without limit, outside the issuance schedule. The attack was enabled by a one-time pull request from a developer with no other history, and exploited some time after being merged into production releases of the Ravencoin software. Once the vulnerability was announced and the fix released, new attackers emerged to exploit it while the network rushed to update enough miners within the first activation window. Much of the RVN minted by these new attackers was subsequently burned, as at least one of them revealed some personally identifiable information, and the lead Ravencoin developer threatened to (and in fact did) involve law enforcement. The attack was running for some time, minting RVN regularly, mixing it up and selling it - 4% of all the RVN in circulation now was created (and sold) in this manner. As this extra RVN was outside the planned issuance, the RavenCoin community must now decide how to accommodate the extra RVN within the planned issuance limit. The subject was also covered by @BlockCommons on [twitter](https://twitter.com/BlockCommons/status/1281930933889896449).
+Ravencoin was subjected to an [attack](https://medium.com/@tronblack/ravencoin-post-vulnerability-fix-fb3a4bd70b7b) which exploited a protocol bug to print RVN without limit, outside the issuance schedule. The attack was enabled by a one-time [pull request](https://github.com/RavenProject/Ravencoin/pull/732) from a developer with no other history, and exploited some time after being merged into production releases of the Ravencoin software. Once the vulnerability was announced and the fix released, new attackers emerged to exploit it while the network rushed to update enough miners within the first activation window. Much of the RVN minted by these new attackers was subsequently burned, as at least one of them revealed some personally identifiable information, and the lead Ravencoin developer threatened to (and in fact did) involve law enforcement. The attack was running for some time, minting RVN regularly, mixing it up and selling it - 4% of all the RVN in circulation now was created (and sold) in this manner. As this extra RVN was outside the planned issuance, the RavenCoin community must now decide how to accommodate the extra RVN within the planned issuance limit. The subject was also covered by @BlockCommons on [Twitter](https://twitter.com/BlockCommons/status/1281930933889896449). The scenario reminds the BTCP exploit we covered in [Dec 2018](201812.md#relevant-external) where a developer without a proven track record introduced a bug that was exploited to mine a significant amount of coins. It is a yet another reminder of extreme care that is required by the consensus code at both technical and social levels.
 
-When twitter was [hacked](https://www.nytimes.com/2020/07/31/technology/twitter-hack-arrest.html) to circulate a Bitcoin scam, thousands of people rushed to send Elon, Barrack and Kanye their BTC - in the expectation that these celebrities were going to double it for them. Coinbase [prevented](https://www.theblockcrypto.com/post/72200/coinbase-says-it-prevented-over-1000-customers-from-sending-280000-worth-of-bitcoin-to-twitter-hackers) over 1,000 of their customers from making these transactions, demonstrating that perhaps some people might be better off not controlling their own keys.
+When Twitter was [hacked](https://www.nytimes.com/2020/07/31/technology/twitter-hack-arrest.html) to circulate a Bitcoin scam, thousands of people rushed to send Elon, Barrack and Kanye their BTC - in the expectation that these celebrities were going to double it for them. Coinbase [prevented](https://www.theblockcrypto.com/post/72200/coinbase-says-it-prevented-over-1000-customers-from-sending-280000-worth-of-bitcoin-to-twitter-hackers) over 1,000 of their customers from making these transactions, demonstrating that perhaps some people might be better off not controlling their own keys.
 
-A Monero researcher funded by the CCS has [found](https://www.reddit.com/r/Monero/comments/i1fknt/ccs_results_monero_atomic_swaps_research/) a way of doing BTC/XMR atomic swaps with recognised cryptographic primitives. The method does not use Hash Time Locked Contracts (HTLC) which are common in many forms of atomic swap but not possible on Monero. Instead, all of the logic for the swap operates on the Bitcoin end. The author cautions that while implementation now is possible this would be technically challenging, a new CCS proposal for this work may be forthcoming.
+A Monero researcher funded by the Community Crowdfunding System (CCS) has [found](https://www.reddit.com/r/Monero/comments/i1fknt/ccs_results_monero_atomic_swaps_research/) a way of doing BTC/XMR atomic swaps with recognised cryptographic primitives. The method does not use Hash Time Locked Contracts (HTLC) which are common in many forms of atomic swap but not possible on Monero. Instead, all of the logic for the swap operates on the Bitcoin end. The author cautions that while implementation now is possible this would be technically challenging, a new CCS proposal for this work may be forthcoming.
 
-Hardware wallet producer Ledger [announced](https://twitter.com/Ledger/status/1288372785098764288) that their marketing database had been breached, with 1M email addresses being leaked along with the full names and postal addresses of 9,500 customers.
-
-{relevant exchanges and websites}
+Hardware wallet producer Ledger [announced](https://twitter.com/Ledger/status/1288372785098764288) that their marketing database had been breached, with 1M email addresses being leaked along with the full names and postal addresses of 9,500 customers. The only way to guarantee that your personal data will not be leaked is to never share it in the first place. This incident highlights the challenge of acquiring hardware wallets without compromising privacy. There is no such problem for software wallets that can be downloaded anonymously.
 
 Someone is [impersonating]( https://cointelegraph.com/news/cointelegraph-cracks-down-on-staff-imposters-investigation-on-the-way) Cointelegraph journalists to scam people, by offering to write stories for payment.
 
-{other: regulations, privacy, security, fun}
-
 Russia is catching up on regulating crypto with the first [bill](https://cointelegraph.com/news/russian-lawmakers-finally-pass-countrys-major-crypto-bill) giving crypto a legal status but banning its use as a a payment method.
-
-{ A new epic anti-encryption bill was proposed to U.S. senate https://cyberlaw.stanford.edu/blog/2020/06/there%E2%80%99s-now-even-worse-anti-encryption-bill-earn-it-doesn%E2%80%99t-make-earn-it-bill-ok }
 
 A new anti-encryption [bill](https://cyberlaw.stanford.edu/blog/2020/06/there%E2%80%99s-now-even-worse-anti-encryption-bill-earn-it-doesn%E2%80%99t-make-earn-it-bill-ok) was introduced in the U.S. Senate, which would make law enforcement backdoors mandatory and forbid any offers of end-to-end encryption services.
 
