--- a/journal/202007.md
+++ b/journal/202007.md
@@ -28,15 +28,9 @@ Commenting on the status of optimizations:
 
 > Flame graph for CPU usage shows pretty clearly that things are being dominated by IO now, so the biggest speedups left will definitely come from that front. ~10% GC, <1% validation, ~3.5% peer I/O, ~55% disk I/O, ~3% profiling cost, ~27% idle, and the rest in minor bits and bobs. ([@davecgh](https://matrix.to/#/!zefvTnlxYHPKvJMThI:decred.org/$U9ybkey7ppiqGR_K_BagIHwcoyNGTS-H91hEaXzghmI))
 
-{ maybe add summary of module movements }
+A total of 53 pull requests from 8 contributors were [merged](https://github.com/decred/dcrd/pulls?q=is%3Apr+merged%3A2020-07-01..2020-07-31+sort%3Aupdated-asc), adding 11K and deleting 5K lines of code.
 
-{ maybe add code/contributor stats }
-
-In progress:
-
-- decentralized Treasury [pull request](https://github.com/decred/dcrd/pull/2170) has more than 300 comments now
-- devs decided to use Schnorr signatures on TSPEND transactions
-  - https://twitter.com/marco_peereboom/status/1283168367856300037
+Decentralized Treasury spending [pull request](https://github.com/decred/dcrd/pull/2170) is undergoing code review and has more than 350 comments now. A very notable [change](https://twitter.com/marco_peereboom/status/1283168367856300037) is that TSPEND transactions will use Schnorr signatures:
 
 > I suggested that we use Schnorr signatures for the Treasury payouts in order to pick up some of the benefits they provide such as smaller signatures and formally provable security. I recently cleaned up the Schnorr code to bring it up to the project's high standards for consensus code and while there are some changes that we want to make to it in the future before switching to it for widespread usage with multi-party signatures among multiple untrusted sources, it is ready for prime time in the context of the Treasury payouts. ([@davecgh](https://matrix.to/#/!zefvTnlxYHPKvJMThI:decred.org/$yLGDR6WC7v7LTDkNYOLgTXHOozNnVc92xNS8B-0epds))
 
