link to social-media-data

--- a/journal/202007.md
+++ b/journal/202007.md
@@ -155,6 +155,8 @@ Community stats as of Aug 1:
 
 \* Chat room upgrade on Jul 9 revealed the number of users active in 23 days before the Aug 1 snapshot.
 
+You can see charts of all social media data points reported in Decred Journal and more [here](https://github.com/xaur/social-media-data/blob/graphs/graphs/index.md) (raw data is in the same repository). Another good resource is [community stats](https://dcrextdata.planetdecred.org/community) page of the dcrextdata project - it tracks fewer accounts but has much better data resolution and interactive charts.
+
 ## Governance
 
 In July the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 13,050 DCR and spent 16,073 DCR. Using July's daily average DCR/USD rate of $15.13, this is $197K received and $243K spent. At June's average daily rate of $16.05, the USD figure billed for work completed in that month is $258K. As of Aug 1, Treasury balance is 630,766 DCR (10.7 million USD at $16.92).
