--- a/journal/202007.md
+++ b/journal/202007.md
@@ -57,13 +57,17 @@ If you have some idle hardware, you can help by [fuzz testing](https://github.co
 - don't require passphrase when importing [redeem](https://github.com/decred/decrediton/pull/2616) scripts
 - bug fixes
 
+A total of 33 pull requests from 6 contributors were merged, adding 7K and deleting 3K lines of code.
+
 [Politeia](https://github.com/decred/politeia):
+
+Multiple new [features](https://twitter.com/lukebp_/status/1285955294703411201) have been deployed to the [proposals.decred.org](https://proposals.decred.org/) site: RFP process, flat display of comments (helps to quickly spot new comments without hunting them down in the thread), dark mode, short proposal URLs, and a switch to restrict posting comments once a day instead of once an hour (workaround for a limitation that will be fixed with the migration to the tlog backend).
+
+Merged changes:
 
 - command-line [utility](https://github.com/decred/politeia/pull/1240) to test the RFP process
 - improved test coverage
 - bug fixes
-
-Multiple new [features](https://twitter.com/lukebp_/status/1285955294703411201) have been deployed to the [proposals.decred.org](https://proposals.decred.org/) site: RFP process, flat display of comments (helps to quickly spot new comments without hunting them down in the thread), dark mode, short proposal URLs, and a switch to restrict posting comments once a day instead of once an hour (workaround for a limitation that will be fixed with the migration to the tlog backend).
 
 CMS:
 
@@ -86,7 +90,7 @@ vspd has now been deployed on testnet by a couple of existing VSP operators, dep
 
 - updated to use latest [dcrwallet](https://github.com/decred/dcrlnd/pull/90) and [dcrd](https://github.com/decred/dcrlnd/pull/105)
 - new [chainscan](https://github.com/decred/dcrlnd/pull/83) package that uses committed filters to detect transactions relevant for the LN node more efficiently and can also operate in SPV mode
-- [implementations](https://github.com/decred/dcrlnd/pull/92) for chainntnfs package and a [driver](https://github.com/decred/dcrlnd/pull/93) for the chainview package that use embedded and remote dcrwallet as a source of chain events. This allows us to further decouple dcrlnd from an underlying dcrd, which is a requirement for having a dcrlnd instance running in SPV mode.
+- [implementations](https://github.com/decred/dcrlnd/pull/92) for chainntnfs package and a [driver](https://github.com/decred/dcrlnd/pull/93) for the chainview package that use embedded and remote dcrwallet as a source of chain events. This allows to further decouple dcrlnd from an underlying dcrd, which is a requirement for having a dcrlnd instance running in SPV mode.
 - [switched](https://github.com/decred/dcrlnd/pull/94) the main dcrlnd package to use the new wallet-backed drivers so that chain IO operations are now fully performed by the underlying dcrwallet instance and dcrlnd no longer requires a connection to a running dcrd to perform its job
 - enable and test [SPV mode](https://github.com/decred/dcrlnd/pull/95) for remote wallets (see [March issue](202003.md#development) for more background)
 - [ported](https://github.com/decred/dcrlnd/pull/99) upstream lnd changes between v0.9.0-beta and 0.10.0-beta - 139 upstream PRs (plus a few non-PR'd commits) were considered for inclusion
@@ -94,9 +98,9 @@ vspd has now been deployed on testnet by a couple of existing VSP operators, dep
 [dcrdex](https://github.com/decred/dcrdex):
 
 - client browser now provides a complete wallet [reconfiguration](https://github.com/decred/dcrdex/pull/533) dialog
-- [smart fee rate](https://github.com/decred/dcrdex/pull/505) handling. To minimize the on-chain mining fees required for the optimal rate at swap time (not order time), smart fee estimates are used. To deal with orders needing to lock the coins required to fund the swaps, which can occur far after order placement when on-chain fees have changed, orders must reserve enough for a "max fee rate". In other words, orders reserve enough for a "max fee rate" in case BTC fees are high when the order is filled, but the optimal network fee at match time is used for the swap contract transaction. (and here's a [tweet](https://twitter.com/chappjc/status/1280510447515586565) for outreach people)
+- [smart fee rate](https://github.com/decred/dcrdex/pull/505) handling. To minimize the on-chain mining fees required for the optimal fee rate at swap time (not order time), smart fee estimates are used. To deal with orders needing to lock the coins required to fund the swaps, which can occur far after order placement when on-chain fees have changed, orders must reserve enough for a "max fee rate". In other words, orders reserve enough for a "max fee rate" in case BTC fees are high when the order is filled, but the optimal network fee at match time is used for the swap contract transaction. (and here's a [tweet](https://twitter.com/chappjc/status/1280510447515586565) for outreach people)
 - improved wallet [locking of coins](https://github.com/decred/dcrdex/pull/525) that fund orders, particularly for chained swaps
-- additional server administration functions: [ban](https://github.com/decred/dcrdex/pull/469), [unban](https://github.com/decred/dcrdex/pull/479), [notify](https://github.com/decred/dcrdex/pull/555), and [notify all](https://github.com/decred/dcrdex/pull/534) (bcast)
+- additional server administration functions: [ban](https://github.com/decred/dcrdex/pull/469), [unban](https://github.com/decred/dcrdex/pull/479), [notify](https://github.com/decred/dcrdex/pull/555), and [notify all](https://github.com/decred/dcrdex/pull/534)
 - for orders with revoked (failed) matches, the order is automatically [unbooked](https://github.com/decred/dcrdex/pull/475) and the clients are notified
 - client's database scheme is now versioned, with an [upgrade](https://github.com/decred/dcrdex/pull/448) infrastructure for future changes
 - the client now automatically [resubscribes](https://github.com/decred/dcrdex/pull/503) to the order book feed after a reconnection with the server
@@ -114,7 +118,7 @@ vspd has now been deployed on testnet by a couple of existing VSP operators, dep
 
 [godcr](https://github.com/planetdecred/godcr):
 
-godcr is an upcoming cross-platform pure-Go desktop SPV wallet for Decred. See [June](202006.md#development) for the introduction.
+godcr is an upcoming cross-platform pure-Go desktop SPV wallet for Decred. See [June](202006.md#development) issue for the introduction.
 
 - [sync status](https://github.com/planetdecred/godcr/pull/170) widget on the Overview page
 - Send page [updated](https://github.com/planetdecred/godcr/pull/184) to match the mobile apps
@@ -133,7 +137,7 @@ Other:
 
 - [decredpower.com](https://decredpower.com/) migrated to [Hugo](https://github.com/planetdecred/decredpower/pull/19) which is more flexible and easier to update. It also features a fresh new theme (don't worry, [retro](https://decredpower.com/retro/) theme is still there!).
 - there is a pending pull request adding [Decred support](https://github.com/trezor/trezor-utxo-lib/pull/9) to Trezor's javascript library
-- @kozel published a detailed [guide](https://medium.com/@artikozel/the-decred-node-back-to-the-source-part-one-27d4576e7e1c) how to build the most recent Decred software and run it on Raspberry Pi.
+- @kozel published a detailed [guide](https://medium.com/@artikozel/the-decred-node-back-to-the-source-part-one-27d4576e7e1c) how to build the most recent Decred software from source and run it on Raspberry Pi
 
 ## People
 
