--- a/journal/202007.md
+++ b/journal/202007.md
@@ -25,10 +25,10 @@ Unless otherwise noted, the work reported here has the "merged to master" status
 
 [dcrd](https://github.com/decred/dcrd):
 
-- added handling of [`notfound`](https://github.com/decred/dcrd/pull/2253) peer message (if a peer tells it has some data but does not serve it upon request, that peer is very likely misbehaving and gets banned)
+- added handling of [`notfound`](https://github.com/decred/dcrd/pull/2253) peer message (if a peer indicates it has some data but does not serve it upon request, that peer is very likely misbehaving and gets banned)
 - added more [test coverage](https://github.com/decred/dcrd/issues/2069) for the `rpcserver` package
 - [exported](https://github.com/decred/dcrd/pull/2240) various consensus functions and types as a step to remove all non-consensus code out of the `txscript` package
-- field normalization code [hardened](https://github.com/decred/dcrd/pull/2258) against the possibility of non-constant time operations due to branch prediction (primarily based on a [pull request](https://github.com/btcsuite/btcd/pull/1084) to btcd from 2017). The PR demonstrates a way of detecting non-constant time behavior by _simply_ looking at the assembly output.
+- field normalization code [hardened](https://github.com/decred/dcrd/pull/2258) against the possibility of non-constant time operations due to branch prediction (primarily based on a [pull request](https://github.com/btcsuite/btcd/pull/1084) to btcd from 2017). The PR demonstrates a way of detecting non-constant time behavior by simply looking at the assembly output.
 - memory usage optimizations in [stake](https://github.com/decred/dcrd/pull/2294) node pruning, txscript [stack](https://github.com/decred/dcrd/pull/2298), trace [logging](https://github.com/decred/dcrd/pull/2301), and [chain tip](https://github.com/decred/dcrd/pull/2302) tracking code
 - mining code [moved](https://github.com/decred/dcrd/pull/1965) into `mining` package
 - [`mempool`](https://github.com/decred/dcrd/pull/2274), [`mining`](https://github.com/decred/dcrd/pull/2275) and [`fees`](https://github.com/decred/dcrd/pull/2287) converted from exported modules to internal packages to reduce the maintenance burden. This is part of the overall effort to reduce the total number of modules and eventually get to the point that it will be possible to follow [semantic versioning](https://semver.org/) for the root module.
@@ -191,7 +191,7 @@ There were 7 proposals submitted in July:
 
 Two of these proposals have an issue with DCR-denominated budgets, which keeps cropping up fairly regularly with new proposals.
 
-Check Politeia Digest [issue 33](https://blockcommons.red/politeia-digest/issue033/) for more details.
+Check Politeia Digest [issue 33](https://blockcommons.red/politeia-digest/issue033/) for more details about the first two of these, issue 34 with details of the other new proposals will be out soon.
 
 ## Network
 
@@ -207,9 +207,9 @@ Nodes: Throughout [July](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=
 
 - Binance added both [DCR/BUSD](https://www.binance.com/en/support/articles/fee761e58d684bc3a1c7fc11660ab596) and [DCR/USDT](https://www.binance.com/en/support/articles/043fc71cdcce4fcfbdae133d8d0f35aa) pairs within weeks of each other.
 
-- There have been some community rumblings that [Binance](https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$sT0_H8a5bHf8iZFUjrLGlV-tgvJVgwmrH9wvoNTkhKw) is about to launch a staking service for DCR. On July 31 Binance [announced](https://www.binance.com/en/support/articles/f73f03d86f1a421fb9afce1221baff2e) that they will be adding "cold staking" although no coins have been announced yet.
+- There have been some community rumblings that [Binance](https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$sT0_H8a5bHf8iZFUjrLGlV-tgvJVgwmrH9wvoNTkhKw) is about to launch a staking service for DCR. On July 31 Binance [announced](https://www.binance.com/en/support/articles/f73f03d86f1a421fb9afce1221baff2e) that they will be adding "cold staking" although no coins have been announced yet. While "flexible staking" allows for immediate withdrawals, customers who participate in "cold staking" will be committing to lock their assets for a defined interval, with penalties for early withdrawals.
 
-- Although originally XT.com [listed](https://twitter.com/XTexchange/status/1062529195094339584) DCR in Nov 2018, now they have DCR trading to [USDT](https://twitter.com/XTexchange/status/1281867070653816832) and a leveraged mode.
+- Originally XT.com [listed](https://twitter.com/XTexchange/status/1062529195094339584) DCR in Nov 2018, now they have DCR trading to [USDT](https://twitter.com/XTexchange/status/1281867070653816832) and a leveraged mode.
 
 - Decred is finally no longer a "Bitcoin fork" on [CoinMarketCap](https://coinmarketcap.com/currencies/decred/).
 
@@ -217,7 +217,7 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 
 ## Community Shop
 
-[Decentralized Boutique](https://twitter.com/decentralizedbt/status/1288529718514536449) announced "Decred Grenade" that is also available as a digital download for printing at home.
+[Decentralized Boutique](https://twitter.com/decentralizedbt/status/1288529718514536449) announced "Decred Grenade" that is also available as a digital download for printing at home, for people who would rather avoid receiving delivery of grenade-shaped items in the mail.
 
 [@OfficialCryptos](https://twitter.com/OfficialCryptos/status/1289170923501817859) unveiled flashy looking Decred heart stickers.
 
@@ -301,7 +301,7 @@ Videos:
 Audio:
 
 - Decred in Depth 28: DCR round up ([libsyn](https://decredindepth.libsyn.com/dcr-round-up-with-checkmate-permabull-nio-0), [soundcloud](https://soundcloud.com/decredindepth/dcr-round-up-with-checkmate-1)) - @Checkmate and @PermabullNino talk shop about Decred fundamentals, the rigged economic system, inspired by @jy-p's piece on the topic and update the community on the progress of their individual proposals.
-- Decred in Depth 29: Ammar Naseer - hyperinflation, sound money, DCR's role ([libsyn](https://decredindepth.libsyn.com/ammar-naseer-hyperinflation-sound-money-dcrs-role))
+- Decred in Depth 29: @Ammarooni makes another DiD appearance to talk about inflationary monetary policy through history, the search for ways to store value, and the ways in which Decred builds on Bitcoin's value proposition. ([libsyn](https://decredindepth.libsyn.com/ammar-naseer-hyperinflation-sound-money-dcrs-role))
 - Rough Consensus 9: Early crypto bull? ([libsyn](https://roughconsensus.libsyn.com/episode-9-early-crypto-bull)) - @mr.black, Checkmate, and @PermabullNino discuss the possible emergence of an early crypto bull market and relevant narratives that might underpin it, which includes DeFi, staking, leverage, yield chasing, and hard assets.
 - Bankless 20: Ethereum opportunity with Chris Burniske ([bankless.substack.com](https://bankless.substack.com/p/-ethereum-opportunity-chris-burniske), [youtube](https://www.youtube.com/watch?v=oG3CUT9kziE)) - Chris highlights the importance of governance in cryptocurrencies and mentions Decred as an example: "Over the long term good and equitable governance, things that involve people, that give people a voice to at least be heard, are key to surviving and resilience, even if they may slow down week-to-week execution through a little bit of analysis paralysis and being too distributed".
 
@@ -355,7 +355,7 @@ Cloudflare suffered an issue that took down many of the sites which rely on it, 
 
 More than 75 companies in the blockchain and cryptocurrency industry don't mind taking U.S. government backed payroll [loans](https://www.coindesk.com/consensys-polychain-tron-ciphertrace-blockchain-startups-got-18m-in-us-ppp-bailout-loans). These include such well known (and funded) outfits as Consensys (Ethereum) and the Electronic Coin Company (Zcash) - which already enjoys (part of) the 20% of ZEC block rewards. Opinions are split between those who think taking government-sponsored loans is at odds with cryptocurrency ideals and those who think they'll be disadvantaged if they refrain while others help themselves. This demonstrates that even a well-subscribed ICO or ongoing 20% block rewards are not guarantees of a secure and sustainable funding situation, it is also necessary to manage spending and if possible establish some reserves.
 
-Josh Concinnati [announced](https://twitter.com/acityinohio/status/1289223795903881216) he is resigning his position as Executive Director of the Zcash Foundation. The tweeted "letter" of resignation cites principles like "In open systems, those who help architect process which grant their organizations power should refuse to wield it" (Josh was involved in securing future ZEC block rewards for the Foundation, which only has a stipend from ECC in the current arrangement). The letter also indicates that a major reason for Josh's departure is that his relationship with the ECC and capacity to work with them was irreparably damaged during the trademark dispute which formed part of the negotiations about Zcash development funding after the initial period of 20% for ECC ends.
+Josh Concinnati [announced](https://twitter.com/acityinohio/status/1289223795903881216) he is resigning his position as Executive Director of the Zcash Foundation. The tweeted "letter" of resignation cites principles like "In open systems, those who help architect process which grant their organizations power should refuse to wield it" (Josh was involved in securing future ZEC block rewards for the Foundation, which only has a stipend from ECC in the current arrangement). The letter also indicates that a major reason for Josh's departure is that his relationship with the ECC and capacity to work with them was irreparably damaged during the trademark dispute, which formed part of the negotiations about Zcash development funding after the initial period of 20% for ECC ends.
 
 Josh also shared a piece of advice that applies to broader cryptocurrency and Decred: "beware relentless, unexamined positivism and near-religious zealotry", "welcome serious critique", "do not cargo-cult startup-ism into the core of your protocol, and resist attempts by others to do so", and "question where influence truly lies and who wields it". Check them in full in the original [post](https://gist.github.com/acityinohio/8590e5384806090fbcf5609e613eae51).
 
