move Binance to rel ext, drop todo

--- a/journal/202007.md
+++ b/journal/202007.md
@@ -174,7 +174,6 @@ In July the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDc
 There were 7 proposals submitted in July:
 
 - The [proposal](https://proposals.decred.org/proposals/c81926b) from @lindseymmc for the continuation of PR services at $3,500/month for one year was approved with 90% support (25% turnout), up on the first proposal's 72% approval.
-  - { does Monde PR prop have the highest support across the marketing domain so far? }
 - [Proposal](https://proposals.decred.org/proposals/dedf452074752d7e29304a0566643feb26d1d130596e04c613e15de113ac2d08) to spend $15,000 creating augmented reality posters.
 - [Proposal](https://proposals.decred.org/proposals/32cba00b8bb0f41689ca8216e2e14a0e3d91a724c83369b3fcda02490dc119f4) to cover moderation of Matrix, Discord, Telegram and Politeia, max $9,000 expected $4,800 for 6 months. This work is already being done and paid for, the proposal is to formalize this and put a limit on how much can be billed for it.
 - [Proposal](https://proposals.decred.org/proposals/2dcbc3e14c06c6e84449f5e2756b944d5ed23be41c23a9f5225f3eef424ce0ae) to offer DCR as a payment option on two travel booking websites ($30K), plus some promotional activities ($21.5K).
@@ -199,8 +198,6 @@ Nodes: Throughout [July](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=
 - NovaDAX exchange [added](https://twitter.com/Decred_BR/status/1275190825060794377) DCR trading against BRL, USDT, BTC and ETH (_missed in Jun_).
 
 - Binance added both [DCR/BUSD](https://www.binance.com/en/support/articles/fee761e58d684bc3a1c7fc11660ab596) and [DCR/USDT](https://www.binance.com/en/support/articles/043fc71cdcce4fcfbdae133d8d0f35aa) pairs within weeks of each other.
-
-- There have been some community rumblings that [Binance](https://matrix.to/#/!aNnAOHkWUdNcEXRGjJ:decred.org/$sT0_H8a5bHf8iZFUjrLGlV-tgvJVgwmrH9wvoNTkhKw) is about to launch a staking service for DCR. On July 31 Binance [announced](https://www.binance.com/en/support/articles/f73f03d86f1a421fb9afce1221baff2e) that they will be adding "cold staking" although no coins have been announced yet. While "flexible staking" allows for immediate withdrawals, customers who participate in "cold staking" will be committing to lock their assets for a defined interval, with penalties for early withdrawals.
 
 - Originally XT.com [listed](https://twitter.com/XTexchange/status/1062529195094339584) DCR in Nov 2018, now they have DCR trading to [USDT](https://twitter.com/XTexchange/status/1281867070653816832) and a leveraged mode.
 
@@ -361,6 +358,8 @@ Ravencoin was subjected to an [attack](https://medium.com/@tronblack/ravencoin-p
 When Twitter was [hacked](https://www.nytimes.com/2020/07/31/technology/twitter-hack-arrest.html) to circulate a Bitcoin scam, thousands of people rushed to send Elon, Barrack and Kanye their BTC - in the expectation that these celebrities were going to double it for them. Coinbase [prevented](https://www.theblockcrypto.com/post/72200/coinbase-says-it-prevented-over-1000-customers-from-sending-280000-worth-of-bitcoin-to-twitter-hackers) over 1,000 of their customers from making these transactions, demonstrating that perhaps some people might be better off not controlling their own keys.
 
 A Monero researcher funded by the Community Crowdfunding System (CCS) has [found](https://www.reddit.com/r/Monero/comments/i1fknt/ccs_results_monero_atomic_swaps_research/) a way of doing BTC/XMR atomic swaps with recognised cryptographic primitives. The method does not use Hash Time Locked Contracts (HTLC) which are common in many forms of atomic swap but not possible on Monero. Instead, all of the logic for the swap operates on the Bitcoin end. The author cautions that while implementation now is possible this would be technically challenging, a new CCS proposal for this work may be forthcoming.
+
+Binance [announced](https://www.binance.com/en/support/articles/f73f03d86f1a421fb9afce1221baff2e) that they will be adding "cold staking" although no coins have been announced yet. While "flexible staking" allows for immediate withdrawals, customers who participate in "cold staking" will be committing to lock their assets for a defined interval, with penalties for early withdrawals.
 
 Hardware wallet producer Ledger [announced](https://twitter.com/Ledger/status/1288372785098764288) that their marketing database had been breached, with 1M email addresses being leaked along with the full names and postal addresses of 9,500 customers. The only way to guarantee that your personal data will not be leaked is to never share it in the first place. This incident highlights the challenge of acquiring hardware wallets without compromising privacy. There is no such problem for software wallets that can be downloaded anonymously.
 
