Comm Disc add, tweaks

--- a/journal/202007.md
+++ b/journal/202007.md
@@ -36,7 +36,7 @@ Commenting on the status of optimizations:
 
 A total of 53 pull requests from 8 contributors were [merged](https://github.com/decred/dcrd/pulls?q=is%3Apr+merged%3A2020-07-01..2020-07-31+sort%3Aupdated-asc), adding 11K and deleting 5K lines of code.
 
-Decentralized Treasury spending [pull request](https://github.com/decred/dcrd/pull/2170) is undergoing code review and has more than 350 comments now. A very notable [change](https://twitter.com/marco_peereboom/status/1283168367856300037) is that TSPEND transactions will use Schnorr signatures:
+Decentralized Treasury spending [pull request](https://github.com/decred/dcrd/pull/2170) is undergoing [testing](https://twitter.com/marco_peereboom/status/1290439680937385985) and code review with over 350 comments now. A very notable [change](https://twitter.com/marco_peereboom/status/1283168367856300037) is that TSPEND transactions will use Schnorr signatures:
 
 > I suggested that we use Schnorr signatures for the Treasury payouts in order to pick up some of the benefits they provide such as smaller signatures and formally provable security. I recently cleaned up the Schnorr code to bring it up to the project's high standards for consensus code and while there are some changes that we want to make to it in the future before switching to it for widespread usage with multi-party signatures among multiple untrusted sources, it is ready for prime time in the context of the Treasury payouts. ([@davecgh](https://matrix.to/#/!zefvTnlxYHPKvJMThI:decred.org/$yLGDR6WC7v7LTDkNYOLgTXHOozNnVc92xNS8B-0epds))
 
@@ -63,7 +63,7 @@ If you have some idle hardware, you can help by [fuzz testing](https://github.co
 - don't require passphrase when importing [redeem](https://github.com/decred/decrediton/pull/2616) scripts
 - bug fixes
 
-A total of 33 pull requests from 6 contributors were merged, adding 7K and deleting 3K lines of code.
+A total of 35 pull requests from 6 contributors were merged, adding 9K and deleting 7K lines of code.
 
 [Politeia](https://github.com/decred/politeia):
 
@@ -320,6 +320,10 @@ Selected Reddit posts:
 
 - "[This party sucks](https://www.reddit.com/r/decred/comments/hy7h7w/this_party_sucks_i_wish_i_was_at_home_staking/). I wish I was at home staking Decred" - @Exitus shared his painful experience of going to the wrong party ([tweet](https://twitter.com/coveryfire7777/status/1287389278444630017) version).
 - Celebrating the community's [response](https://www.reddit.com/r/decred/comments/hp834o/a_sound_example_of_community_engagement/) to gaps where Decred can be mentioned.
+- Animated visualization of Decred [Git history](https://www.reddit.com/r/decred/comments/i0fcf4/decred_git_history_2016_2020/) 2016-2020 by @pablito.
+- Ideas to [reward](https://www.reddit.com/r/decred/comments/hw3atn/ideas_for_growing_the_decred_userbase/) influencers for educating their audiences about Decred, tipping systems, DCR vouchers.
+- Idea to filter out [tainted](https://www.reddit.com/r/decred/comments/hsyij4/filtering_of_tainted_coins_in_dcrdex/) coins on dcrdex was met with some criticism, in part due to the complexity it introduces.
+- Another "attention grab" attack thread asking about ["use cases"](https://www.reddit.com/r/decred/comments/hj5w4q/hi_im_new_just_wondering_what_are_some_usecases/) for DCR was removed (account deleted) after receiving substantial, but was soon resurrected.
 
 Selected Twitter discussions:
 
