fix matrix links, tweaks

--- a/journal/202007.md
+++ b/journal/202007.md
@@ -10,7 +10,7 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 - Politeia saw a round of significant new features deployed, including RFP proposals and dark mode. On the CMS end accountability features are being added.
 - vspd has received the last major change it needed, and is being tested on testnet and soon mainnet.
 - There has been more progress towards running dcrlnd in SPV mode, and a huge codebase upgrade to match new lnd version.
-- Discussion of community outreach activity has increased considerably across reddit, Matrix and Discord channels - with a corresponding increase in the number of marketing-related proposals appearing on Politeia.
+- Discussion of community outreach activity has increased considerably across Reddit, Matrix and Discord channels - with a corresponding increase in the number of marketing-related proposals appearing on Politeia.
 
 ## Development
 
@@ -32,13 +32,13 @@ Unless otherwise noted, the work reported here has the "merged to master" status
 
 Commenting on the status of optimizations:
 
-> Flame graph for CPU usage shows pretty clearly that things are being dominated by IO now, so the biggest speedups left will definitely come from that front. ~10% GC, <1% validation, ~3.5% peer I/O, ~55% disk I/O, ~3% profiling cost, ~27% idle, and the rest in minor bits and bobs. ([@davecgh](https://matrix.to/#/!zefvTnlxYHPKvJMThI:decred.org/$U9ybkey7ppiqGR_K_BagIHwcoyNGTS-H91hEaXzghmI))
+> Flame graph for CPU usage shows pretty clearly that things are being dominated by IO now, so the biggest speedups left will definitely come from that front. ~10% GC, <1% validation, ~3.5% peer I/O, ~55% disk I/O, ~3% profiling cost, ~27% idle, and the rest in minor bits and bobs. ([@davecgh](https://chat.decred.org/#/room/!zefvTnlxYHPKvJMThI:decred.org/$U9ybkey7ppiqGR_K_BagIHwcoyNGTS-H91hEaXzghmI))
 
 A total of 53 pull requests from 8 contributors were [merged](https://github.com/decred/dcrd/pulls?q=is%3Apr+merged%3A2020-07-01..2020-07-31+sort%3Aupdated-asc), adding 11K and deleting 5K lines of code.
 
 Decentralized Treasury spending [pull request](https://github.com/decred/dcrd/pull/2170) is undergoing [testing](https://twitter.com/marco_peereboom/status/1290439680937385985) and code review with over 350 comments now. A very notable [change](https://twitter.com/marco_peereboom/status/1283168367856300037) is that TSPEND transactions will use Schnorr signatures:
 
-> I suggested that we use Schnorr signatures for the Treasury payouts in order to pick up some of the benefits they provide such as smaller signatures and formally provable security. I recently cleaned up the Schnorr code to bring it up to the project's high standards for consensus code and while there are some changes that we want to make to it in the future before switching to it for widespread usage with multi-party signatures among multiple untrusted sources, it is ready for prime time in the context of the Treasury payouts. ([@davecgh](https://matrix.to/#/!zefvTnlxYHPKvJMThI:decred.org/$yLGDR6WC7v7LTDkNYOLgTXHOozNnVc92xNS8B-0epds))
+> I suggested that we use Schnorr signatures for the Treasury payouts in order to pick up some of the benefits they provide such as smaller signatures and formally provable security. I recently cleaned up the Schnorr code to bring it up to the project's high standards for consensus code and while there are some changes that we want to make to it in the future before switching to it for widespread usage with multi-party signatures among multiple untrusted sources, it is ready for prime time in the context of the Treasury payouts. ([@davecgh](https://chat.decred.org/#/room/!zefvTnlxYHPKvJMThI:decred.org/$yLGDR6WC7v7LTDkNYOLgTXHOozNnVc92xNS8B-0epds))
 
 If you have some idle hardware, you can help by [fuzz testing](https://github.com/degeri/dcrd-continuous-fuzz) dcrd.
 
@@ -292,7 +292,7 @@ Audio:
 
 - Decred in Depth 28: DCR round up ([libsyn](https://decredindepth.libsyn.com/dcr-round-up-with-checkmate-permabull-nio-0), [soundcloud](https://soundcloud.com/decredindepth/dcr-round-up-with-checkmate-1)) - @Checkmate and @PermabullNino talk shop about Decred fundamentals, the rigged economic system, inspired by @jy-p's piece on the topic and update the community on the progress of their individual proposals.
 - Decred in Depth 29: @Ammarooni makes another DiD appearance to talk about inflationary monetary policy through history, the search for ways to store value, and the ways in which Decred builds on Bitcoin's value proposition. ([libsyn](https://decredindepth.libsyn.com/ammar-naseer-hyperinflation-sound-money-dcrs-role))
-- Rough Consensus 9: Early crypto bull? ([libsyn](https://roughconsensus.libsyn.com/episode-9-early-crypto-bull)) - @mr.black, Checkmate, and @PermabullNino discuss the possible emergence of an early crypto bull market and relevant narratives that might underpin it, which includes DeFi, staking, leverage, yield chasing, and hard assets.
+- Rough Consensus 9: Early crypto bull? ([libsyn](https://roughconsensus.libsyn.com/episode-9-early-crypto-bull)) - @mr.black, @Checkmate, and @PermabullNino discuss the possible emergence of an early crypto bull market and relevant narratives that might underpin it, which includes DeFi, staking, leverage, yield chasing, and hard assets.
 - Bankless 20: Ethereum opportunity with Chris Burniske ([bankless.substack.com](https://bankless.substack.com/p/-ethereum-opportunity-chris-burniske), [youtube](https://www.youtube.com/watch?v=oG3CUT9kziE)) - Chris highlights the importance of governance in cryptocurrencies and mentions Decred as an example: "Over the long term good and equitable governance, things that involve people, that give people a voice to at least be heard, are key to surviving and resilience, even if they may slow down week-to-week execution through a little bit of analysis paralysis and being too distributed".
 
 Games: 
