--- a/journal/202007.md
+++ b/journal/202007.md
@@ -323,15 +323,18 @@ Selected Reddit posts:
 - Animated visualization of Decred [Git history](https://www.reddit.com/r/decred/comments/i0fcf4/decred_git_history_2016_2020/) 2016-2020 by @pablito.
 - Ideas to [reward](https://www.reddit.com/r/decred/comments/hw3atn/ideas_for_growing_the_decred_userbase/) influencers for educating their audiences about Decred, tipping systems, DCR vouchers.
 - Idea to filter out [tainted](https://www.reddit.com/r/decred/comments/hsyij4/filtering_of_tainted_coins_in_dcrdex/) coins on dcrdex was met with some criticism, in part due to the complexity it introduces.
-- Another "attention grab" attack thread asking about ["use cases"](https://www.reddit.com/r/decred/comments/hj5w4q/hi_im_new_just_wondering_what_are_some_usecases/) for DCR was removed (account deleted) after receiving substantial, but was soon resurrected.
+- Another "attention grab" attack thread asking about ["use cases"](https://www.reddit.com/r/decred/comments/hj5w4q/hi_im_new_just_wondering_what_are_some_usecases/) for DCR was removed (account deleted) after collecting substantial replies, but was soon resurrected.
 
 Selected Twitter discussions:
 
 - @chappjc [asks](https://twitter.com/chappjc/status/1288167672849596417) whether an open source non-rent-seeking decentralized exchange counts as DeFi?
-- @jholdstock is [back](https://twitter.com/JamieHoldstock/status/1288030715486056448) on Twitter to put out an update on VSPD and call for more testers, @sethsimmons [dives](https://twitter.com/sethisimmons/status/1288189814349664258) in and is up and running on testnet in [doublequick](https://twitter.com/sethisimmons/status/1288554162628833280) time.
-- @pablito [suggests](https://twitter.com/plabarta_/status/1286062208460390401) that Messari may have missed a DAO.
+- @jholdstock is [back](https://twitter.com/JamieHoldstock/status/1288030715486056448) on Twitter to put out an update on vspd and call for more testers, @sethsimmons [dives](https://twitter.com/sethisimmons/status/1288189814349664258) in and is up and running on testnet in [doublequick](https://twitter.com/sethisimmons/status/1288554162628833280) time.
+- @pablito [suggested](https://twitter.com/plabarta_/status/1286062208460390401) that Messari may have missed a DAO and helped to fix their chart.
 - @DecredAustralia [_coined_](https://twitter.com/DecredAustralia/status/1287541151105298432) the term [#DCRDiet](https://twitter.com/hashtag/DCRDiet) where people choose to spend their money on buying DCR over fast food and unnecessary items.
-- Check out [@decredcitizen](https://twitter.com/decredcitizen), a new Twitter account with the right Decred vibe in it. Each tweet is sharp and balanced. "deCred is not they, he, she, you. deCred is I, me, we."
+- Check out [@decredcitizen](https://twitter.com/decredcitizen), a new Twitter account with the right Decred vibe in it. Each tweet is sharp and balanced.
+
+> deCred is not they, he, she, you.  
+> deCred is I, me, we. ([tweet](https://twitter.com/decredcitizen/status/1287827725596622848))
 
 ## Markets
 
