--- a/journal/202007.md
+++ b/journal/202007.md
@@ -1,8 +1,8 @@
 # {DRAFT} Decred Journal – July 2020
 
-![{alt text}](../img/{file.jpg} "{hover tooltip text}")
+![abstract art](../img/journal-202007-384.png)
 
-_Image: {caption: "$title by $author. $optional-description" for artwork, or just "$description" for photos}_
+_Image: Relay Pylons by @saender_
 
 July's highlights:
 
@@ -388,4 +388,4 @@ Credits (alphabetical order):
 
 - writing and editing: bee, chappjc, degeri, elian, l1ndseymm, richardred
 - reviews and feedback: adcade, buck54321, davecgh, emiliomann, jholdstock, jz
-- title image: {}
+- title image: saender
