add reddit links

--- a/journal/202007.md
+++ b/journal/202007.md
@@ -177,7 +177,7 @@ There were 7 proposals submitted in July:
 - [Proposal](https://proposals.decred.org/proposals/dedf452074752d7e29304a0566643feb26d1d130596e04c613e15de113ac2d08) to spend $15,000 creating augmented reality posters.
 - [Proposal](https://proposals.decred.org/proposals/32cba00b8bb0f41689ca8216e2e14a0e3d91a724c83369b3fcda02490dc119f4) to cover moderation of Matrix, Discord, Telegram and Politeia, max $9,000 expected $4,800 for 6 months. This work is already being done and paid for, the proposal is to formalize this and put a limit on how much can be billed for it.
 - [Proposal](https://proposals.decred.org/proposals/2dcbc3e14c06c6e84449f5e2756b944d5ed23be41c23a9f5225f3eef424ce0ae) to offer DCR as a payment option on two travel booking websites ($30K), plus some promotional activities ($21.5K).
-- [Proposal](https://proposals.decred.org/proposals/3372cfce1218ba81d9c8ca0535cd9dd590f60c92adc068c0089218ae7e3e99e1) to spend $10K on a range of marketing activities (including paid retweets/endorsements and advertisements).
+- [Proposal](https://proposals.decred.org/proposals/3372cfce1218ba81d9c8ca0535cd9dd590f60c92adc068c0089218ae7e3e99e1) to spend $10K on a range of marketing activities (including paid retweets/endorsements and advertisements) - associated reddit [post](https://www.reddit.com/r/decred/comments/hzo3yu/creating_a_decred_marketing_workgroup/).
 - [Proposal](https://proposals.decred.org/proposals/4f81031) to create 20 social media memes for 10 DCR/meme.
 - [Proposal](https://proposals.decred.org/proposals/7a67ed5) to host a series of poker games with DCR prizes (300 DCR/month).
 
@@ -329,6 +329,7 @@ Selected Reddit posts:
 
 - "[This party sucks](https://www.reddit.com/r/decred/comments/hy7h7w/this_party_sucks_i_wish_i_was_at_home_staking/). I wish I was at home staking Decred" - @Exitus shared his painful experience of going to the wrong party ([tweet](https://twitter.com/coveryfire7777/status/1287389278444630017) version).
 - Celebrating the community's [response](https://www.reddit.com/r/decred/comments/hp834o/a_sound_example_of_community_engagement/) to gaps where Decred can be mentioned.
+- Suggestion to participate in a "[MetaDAO](https://www.reddit.com/r/decred/comments/hxul33/metadao_pooling_onchain_funding_for_public_good/)" pooling funding for public good proposals with other projects.
 - Animated visualization of Decred [Git history](https://www.reddit.com/r/decred/comments/i0fcf4/decred_git_history_2016_2020/) 2016-2020 by @pablito.
 - Ideas to [reward](https://www.reddit.com/r/decred/comments/hw3atn/ideas_for_growing_the_decred_userbase/) influencers for educating their audiences about Decred, tipping systems, DCR vouchers.
 - Idea to filter out [tainted](https://www.reddit.com/r/decred/comments/hsyij4/filtering_of_tainted_coins_in_dcrdex/) coins on dcrdex was met with some criticism, in part due to the complexity it introduces.
